--- a/test_products.ipynb
+++ b/test_products.ipynb
@@ -6,19 +6,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:20.874835Z",
-     "start_time": "2025-12-05T04:34:20.655486Z"
+     "end_time": "2025-12-05T05:15:30.140570Z",
+     "start_time": "2025-12-05T05:15:30.138555Z"
     }
    },
-   "source": "import pandas as pd",
+   "source": [
+    "\n",
+    "from rapidfuzz import fuzz"
+   ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 63
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:20.881343Z",
-     "start_time": "2025-12-05T04:34:20.878292Z"
+     "end_time": "2025-12-05T05:15:30.150149Z",
+     "start_time": "2025-12-05T05:15:30.143657Z"
     }
    },
    "cell_type": "code",
@@ -38,35 +41,52 @@
     "    if pred == true:\n",
     "        return 1\n",
     "    else:\n",
-    "        return 0"
+    "        return 0\n",
+    "\n",
+    "\n",
+    "def levenshtein_similarity(row, threshold=0.5):\n",
+    "    pred = str(row[\"pred\"])\n",
+    "    true = str(row[\"test\"])\n",
+    "\n",
+    "    score = fuzz.ratio(pred, true) / 100  # convert to 0–1 similarity\n",
+    "\n",
+    "    return score if score >= threshold else 0.0"
    ],
    "id": "c40f4db3338a47eb",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.576645Z",
-     "start_time": "2025-12-05T04:34:20.885548Z"
+     "end_time": "2025-12-05T05:15:30.856499Z",
+     "start_time": "2025-12-05T05:15:30.155862Z"
     }
    },
    "cell_type": "code",
    "source": [
     "pred_df = pd.read_csv(\"combine_data/mapped_responses.csv\")\n",
-    "pred_df.head()"
+    "pred_df.head(100)"
    ],
    "id": "ba5bab046e0665dc",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   fdc_id                                        description    response\n",
-       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...    biscuits\n",
-       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...    cinnamon\n",
-       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...  breadcrumb\n",
-       "3  167515     George Weston Bakeries, Thomas English Muffins      muffin\n",
-       "4  167516         Waffles, buttermilk, frozen, ready-to-heat      waffle"
+       "    fdc_id                                        description    response\n",
+       "0   167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...    biscuits\n",
+       "1   167513  Pillsbury, Cinnamon Rolls with Icing, refriger...    cinnamon\n",
+       "2   167514  Kraft Foods, Shake N Bake Original Recipe, Coa...  breadcrumb\n",
+       "3   167515     George Weston Bakeries, Thomas English Muffins      muffin\n",
+       "4   167516         Waffles, buttermilk, frozen, ready-to-heat      waffle\n",
+       "..     ...                                                ...         ...\n",
+       "95  167607                   Moose, meat, raw (Alaska Native)        meat\n",
+       "96  167608                   Mashu roots, raw (Alaska Native)        root\n",
+       "97  167609              Moose, liver, braised (Alaska Native)       liver\n",
+       "98  167610  Seal, bearded (Oogruk), meat, raw (Alaska Native)        meat\n",
+       "99  167611         Oil, bearded seal (Oogruk) (Alaska Native)         oil\n",
+       "\n",
+       "[100 rows x 3 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -123,48 +143,99 @@
        "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
        "      <td>waffle</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>167607</td>\n",
+       "      <td>Moose, meat, raw (Alaska Native)</td>\n",
+       "      <td>meat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>167608</td>\n",
+       "      <td>Mashu roots, raw (Alaska Native)</td>\n",
+       "      <td>root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>167609</td>\n",
+       "      <td>Moose, liver, braised (Alaska Native)</td>\n",
+       "      <td>liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>167610</td>\n",
+       "      <td>Seal, bearded (Oogruk), meat, raw (Alaska Native)</td>\n",
+       "      <td>meat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>167611</td>\n",
+       "      <td>Oil, bearded seal (Oogruk) (Alaska Native)</td>\n",
+       "      <td>oil</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.608045Z",
-     "start_time": "2025-12-05T04:34:21.603748Z"
+     "end_time": "2025-12-05T05:15:30.898693Z",
+     "start_time": "2025-12-05T05:15:30.893651Z"
     }
    },
    "cell_type": "code",
    "source": [
     "test_df = pd.read_csv(\"data/test/TEST_food_branded.csv\", usecols=[\"fdc_id\", \"description\", \"mapped_ingredient\"])\n",
-    "test_df.head()"
+    "test_df.head(100)"
    ],
    "id": "1503a73c5b70987f",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "   fdc_id                                        description  \\\n",
-       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...   \n",
-       "1  167513  Pillsbury, Cinnamon Rolls with Icing, refriger...   \n",
-       "2  167514  Kraft Foods, Shake N Bake Original Recipe, Coa...   \n",
-       "3  167515     George Weston Bakeries, Thomas English Muffins   \n",
-       "4  167516         Waffles, buttermilk, frozen, ready-to-heat   \n",
+       "    fdc_id                                        description  \\\n",
+       "0   167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...   \n",
+       "1   167513  Pillsbury, Cinnamon Rolls with Icing, refriger...   \n",
+       "2   167514  Kraft Foods, Shake N Bake Original Recipe, Coa...   \n",
+       "3   167515     George Weston Bakeries, Thomas English Muffins   \n",
+       "4   167516         Waffles, buttermilk, frozen, ready-to-heat   \n",
+       "..     ...                                                ...   \n",
+       "95  167607                   Moose, meat, raw (Alaska Native)   \n",
+       "96  167608                   Mashu roots, raw (Alaska Native)   \n",
+       "97  167609              Moose, liver, braised (Alaska Native)   \n",
+       "98  167610  Seal, bearded (Oogruk), meat, raw (Alaska Native)   \n",
+       "99  167611         Oil, bearded seal (Oogruk) (Alaska Native)   \n",
        "\n",
-       "    mapped_ingredient  \n",
-       "0  buttermilk biscuit  \n",
-       "1       cinnamon roll  \n",
-       "2         bread crumb  \n",
-       "3      english muffin  \n",
-       "4   buttermilk waffle  "
+       "     mapped_ingredient  \n",
+       "0   buttermilk biscuit  \n",
+       "1        cinnamon roll  \n",
+       "2          bread crumb  \n",
+       "3       english muffin  \n",
+       "4    buttermilk waffle  \n",
+       "..                 ...  \n",
+       "95               moose  \n",
+       "96          mashu root  \n",
+       "97         moose liver  \n",
+       "98                seal  \n",
+       "99            seal oil  \n",
+       "\n",
+       "[100 rows x 3 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -221,23 +292,60 @@
        "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
        "      <td>buttermilk waffle</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>167607</td>\n",
+       "      <td>Moose, meat, raw (Alaska Native)</td>\n",
+       "      <td>moose</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>167608</td>\n",
+       "      <td>Mashu roots, raw (Alaska Native)</td>\n",
+       "      <td>mashu root</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>167609</td>\n",
+       "      <td>Moose, liver, braised (Alaska Native)</td>\n",
+       "      <td>moose liver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>167610</td>\n",
+       "      <td>Seal, bearded (Oogruk), meat, raw (Alaska Native)</td>\n",
+       "      <td>seal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>167611</td>\n",
+       "      <td>Oil, bearded seal (Oogruk) (Alaska Native)</td>\n",
+       "      <td>seal oil</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 66
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.718010Z",
-     "start_time": "2025-12-05T04:34:21.683626Z"
+     "end_time": "2025-12-05T05:15:31.070008Z",
+     "start_time": "2025-12-05T05:15:31.035240Z"
     }
    },
    "cell_type": "code",
@@ -333,18 +441,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.769863Z",
-     "start_time": "2025-12-05T04:34:21.764999Z"
+     "end_time": "2025-12-05T05:15:31.100270Z",
+     "start_time": "2025-12-05T05:15:31.095555Z"
     }
    },
    "cell_type": "code",
@@ -502,52 +610,66 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 68
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.834750Z",
-     "start_time": "2025-12-05T04:34:21.831613Z"
+     "end_time": "2025-12-05T05:15:31.173446Z",
+     "start_time": "2025-12-05T05:15:31.168494Z"
     }
    },
    "cell_type": "code",
-   "source": "new_df[\"accuracy\"] = new_df.apply(accuracy, axis=1)",
+   "source": [
+    "new_df[\"accuracy\"] = new_df.apply(accuracy, axis=1)\n",
+    "new_df[\"levenshtein\"] = new_df.apply(levenshtein_similarity, axis=1)"
+   ],
    "id": "9896d7b214e009d",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.848995Z",
-     "start_time": "2025-12-05T04:34:21.846993Z"
+     "end_time": "2025-12-05T05:15:50.486939Z",
+     "start_time": "2025-12-05T05:15:50.484208Z"
     }
    },
    "cell_type": "code",
-   "source": "print(f\"Accuracy:  {new_df['accuracy'].mean():.4f} (Total Correct Rows / Total Rows)\")",
+   "source": [
+    "print(f\"Accuracy:                {new_df['accuracy'].mean():.4f} (Total Correct Rows / Total Rows)\\n\")\n",
+    "print(\n",
+    "    f\"Levenshtein Similarity: {new_df['levenshtein'].mean():.4f} \"\n",
+    "    f\"(Avg similarity after removing pairs with <50% character overlap; \"\n",
+    "    f\"based on the minimal number of insertions, deletions, and substitutions \"\n",
+    "    f\"needed to transform one string into the other)\"\n",
+    ")\n",
+    "\n"
+   ],
    "id": "62378e0136f015ad",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.3800 (Total Correct Rows / Total Rows)\n"
+      "Accuracy:                0.3800 (Total Correct Rows / Total Rows)\n",
+      "\n",
+      "Levenshtein Similarity: 0.6282 (Avg similarity after removing pairs with <50% character overlap; based on the minimal number of insertions, deletions, and substitutions needed to transform one string into the other)\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T04:34:21.877785Z",
-     "start_time": "2025-12-05T04:34:21.876576Z"
+     "end_time": "2025-12-05T05:15:31.208786Z",
+     "start_time": "2025-12-05T05:15:31.207648Z"
     }
    },
    "cell_type": "code",
