moved retriever notebooks and updated code

--- a/llm_processing/retrieve_food_kg.ipynb
+++ b/llm_processing/retrieve_food_kg.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Goal: Retrieve DB",
+   "source": "# This notebook retrieves nourish_public_FoodKG from the SQL server and downloads it locally as a csv for convenience in future work.",
    "id": "5bcd2d4a58af6727"
   },
   {
@@ -256,7 +256,10 @@
     }
    },
    "cell_type": "code",
-   "source": "len(df)  # check number of rows",
+   "source": [
+    "# Sanity check: inspect the number of rows\n",
+    "len(df)"
+   ],
    "id": "aeb8aff02150cd1e",
    "outputs": [
     {
@@ -280,248 +283,13 @@
     }
    },
    "cell_type": "code",
-   "source": "df.to_csv(\"data/nourish_public_FoodKG.csv\", index=False)  # save entire database",
+   "source": [
+    "# Save the entire table\n",
+    "df.to_csv(\"data/nourish_public_FoodKG.csv\", index=False)"
+   ],
    "id": "2661eff38d624e1e",
    "outputs": [],
    "execution_count": 12
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:25:59.649325Z",
-     "start_time": "2025-11-17T04:25:47.192193Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df = pd.read_csv(\"data/raw/nourish_public_FoodKG.csv\")",
-   "id": "574afe2e02c07e5d",
-   "outputs": [],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:26:04.660045Z",
-     "start_time": "2025-11-17T04:26:04.464138Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "filtered_df = df[[\"id\", \"title\", \"ingredients\"]].sort_values(by=[\"id\"])  # get only id and ingredients\n",
-    "filtered_df.head()"
-   ],
-   "id": "b67cda3719ec6cc1",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     id                  title  \\\n",
-       "443   0    No-Bake Nut Cookies   \n",
-       "444   1  Jewell Ball'S Chicken   \n",
-       "445   2            Creamy Corn   \n",
-       "446   3          Chicken Funny   \n",
-       "447   4     Reeses Cups(Candy)   \n",
-       "\n",
-       "                                           ingredients  \n",
-       "443  ['1 c. firmly packed brown sugar', '1/2 c. eva...  \n",
-       "444  ['1 small jar chipped beef, cut up', '4 boned ...  \n",
-       "445  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...  \n",
-       "446  ['1 large whole chicken', '2 (10 1/2 oz.) cans...  \n",
-       "447  ['1 c. peanut butter', '3/4 c. graham cracker ...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>ingredients</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>0</td>\n",
-       "      <td>No-Bake Nut Cookies</td>\n",
-       "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>444</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Jewell Ball'S Chicken</td>\n",
-       "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>445</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Creamy Corn</td>\n",
-       "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>446</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Chicken Funny</td>\n",
-       "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>447</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Reeses Cups(Candy)</td>\n",
-       "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-17T04:26:17.654578Z",
-     "start_time": "2025-11-17T04:26:14.049139Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "filtered_df.to_csv(\"data/FoodKG_ingredients.csv\", index=False)  # save only id and ingredients",
-   "id": "ef7dda2fbc790328",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T16:59:59.736897Z",
-     "start_time": "2025-11-06T16:59:59.733765Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "len(filtered_df)",
-   "id": "5760213d24b480d3",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2231142"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 18
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T17:08:44.253282Z",
-     "start_time": "2025-11-06T17:08:44.246618Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "filtered_df.tail(5)  # note ids are sorted",
-   "id": "48722f4de0d0de2",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "              id                                        ingredients\n",
-       "279      2231137  [1/2 cup chocolate hazelnut spread (recommende...\n",
-       "1948712  2231138  [1 dozen eggs, 1 paprika, 1 salt and pepper to...\n",
-       "1948713  2231139  [150 grams Daikon radish, 1 tbsp Sesame oil, 1...\n",
-       "1948714  2231140  [1 cup apple cider, 6 tablespoons sugar, 4 tab...\n",
-       "1948716  2231141  [1 pound ground veal, 1/2 pound sweet Italian ..."
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>ingredients</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>279</th>\n",
-       "      <td>2231137</td>\n",
-       "      <td>[1/2 cup chocolate hazelnut spread (recommende...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1948712</th>\n",
-       "      <td>2231138</td>\n",
-       "      <td>[1 dozen eggs, 1 paprika, 1 salt and pepper to...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1948713</th>\n",
-       "      <td>2231139</td>\n",
-       "      <td>[150 grams Daikon radish, 1 tbsp Sesame oil, 1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1948714</th>\n",
-       "      <td>2231140</td>\n",
-       "      <td>[1 cup apple cider, 6 tablespoons sugar, 4 tab...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1948716</th>\n",
-       "      <td>2231141</td>\n",
-       "      <td>[1 pound ground veal, 1/2 pound sweet Italian ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 26
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "a638849d0171c4e1"
   }
  ],
  "metadata": {
