--- a/llm_processing/retrieve_usda_branded_experimental.ipynb
+++ b/llm_processing/retrieve_usda_branded_experimental.ipynb
@@ -3,32 +3,15 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Goal: Retrieve DB",
+   "source": "# This notebook retrieves usda_2022_food_branded_experimental from the SQL server and downloads it locally as a csv for convenience in future work. This notebook saves only the columns we use for future processing.",
    "id": "5bcd2d4a58af6727"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T17:58:32.578391Z",
-     "start_time": "2025-11-06T17:58:32.576312Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# !pip install --upgrade pip -q\n",
-    "# !pip install psycopg2-binary -q\n",
-    "# !pip install SQLAlchemy -q"
-   ],
-   "id": "8565f315e8ce74cb",
-   "outputs": [],
-   "execution_count": 17
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:58:32.595498Z",
-     "start_time": "2025-11-06T17:58:32.591540Z"
+     "end_time": "2025-11-07T04:28:15.523020Z",
+     "start_time": "2025-11-07T04:28:14.834147Z"
     }
    },
    "cell_type": "code",
@@ -49,18 +32,18 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:58:32.795750Z",
-     "start_time": "2025-11-06T17:58:32.601957Z"
+     "end_time": "2025-11-07T04:28:15.948541Z",
+     "start_time": "2025-11-07T04:28:15.533193Z"
     }
    },
    "cell_type": "code",
@@ -90,13 +73,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:59:06.046014Z",
-     "start_time": "2025-11-06T17:58:32.803278Z"
+     "end_time": "2025-11-07T04:28:29.057970Z",
+     "start_time": "2025-11-07T04:28:15.966658Z"
     }
    },
    "cell_type": "code",
@@ -104,111 +87,110 @@
     "# There's a lot of columns so only take what is needed and pre-filter\n",
     "query = \"\"\"\n",
     "        SELECT fdc_id,\n",
-    "               ingredients\n",
-    "        FROM usda_2022_branded_food_product\n",
+    "               description\n",
+    "        FROM usda_2022_food_branded_experimental\n",
     "        WHERE fdc_id IS NOT NULL\n",
-    "          AND ingredients IS NOT NULL; \\\n",
+    "          AND description IS NOT NULL; \\\n",
     "        \"\"\"\n",
     "df = pd.read_sql(query, engine)"
    ],
    "id": "3341dcef91ea8adc",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:59:06.059920Z",
-     "start_time": "2025-11-06T17:59:06.057722Z"
+     "end_time": "2025-11-07T04:28:29.630427Z",
+     "start_time": "2025-11-07T04:28:29.628330Z"
     }
    },
    "cell_type": "code",
-   "source": "df.columns",
+   "source": [
+    "# Sanity check: make sure have the right columns\n",
+    "df.columns"
+   ],
    "id": "434fef115a1b7dbd",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['fdc_id', 'ingredients'], dtype='object')"
+       "Index(['fdc_id', 'description'], dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:59:06.068664Z",
-     "start_time": "2025-11-06T17:59:06.066559Z"
+     "end_time": "2025-11-07T04:28:29.641707Z",
+     "start_time": "2025-11-07T04:28:29.639922Z"
     }
    },
    "cell_type": "code",
-   "source": "len(df)  # check number of rows",
+   "source": [
+    "# Sanity check: inspect the number of rows\n",
+    "len(df)"
+   ],
    "id": "aeb8aff02150cd1e",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1702125"
+       "1766279"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 22
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:59:07.704131Z",
-     "start_time": "2025-11-06T17:59:06.075898Z"
+     "end_time": "2025-11-07T04:28:30.609207Z",
+     "start_time": "2025-11-07T04:28:29.679770Z"
     }
    },
    "cell_type": "code",
-   "source": "sorted_df = df.sort_values(by=[\"fdc_id\", \"ingredients\"])  # sort by id because looks nice",
+   "source": [
+    "# Sort by id for convenience in future processing\n",
+    "sorted_df = df.sort_values(by=[\"fdc_id\", \"description\"])  # sort by id because looks nice"
+   ],
    "id": "b0b58147ce24d83",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T18:01:39.783715Z",
-     "start_time": "2025-11-06T18:01:35.094445Z"
+     "end_time": "2025-11-07T04:28:31.765354Z",
+     "start_time": "2025-11-07T04:28:31.761773Z"
     }
    },
    "cell_type": "code",
-   "source": "sorted_df.to_csv(\"data/usda_2022_branded_food_product_INGREDIENTS_ONLY.csv\", index=False)  # save database",
-   "id": "2661eff38d624e1e",
-   "outputs": [],
-   "execution_count": 26
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T17:59:12.261246Z",
-     "start_time": "2025-11-06T17:59:12.258327Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sorted_df.tail(5)  # note ids are sorted",
+   "source": [
+    "# Note fdc_id is sorted\n",
+    "sorted_df.tail(5)"
+   ],
    "id": "48722f4de0d0de2",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "         fdc_id                                        ingredients\n",
-       "144015  2340755  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
-       "144016  2340756  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
-       "144017  2340757  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
-       "144018  2340758  FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...\n",
-       "144019  2340759  COLOMBIAN COFFEE, MILK PROTEIN ISOLATE, COCOA ..."
+       "          fdc_id                                        description\n",
+       "1766274  2353625  Feed efficiency of lactating Holstein cows is ...\n",
+       "1766275  2353626  Contrast Study on Secondary Metabolite Profile...\n",
+       "1766276  2353627  Deriving information from complex data sets: I...\n",
+       "1766277  2353628  Identification of High and Low Branched-Chain ...\n",
+       "1766278  2353629  Effects of Differences in Resistant Starch Con..."
       ],
       "text/html": [
        "<div>\n",
@@ -230,59 +212,59 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>fdc_id</th>\n",
-       "      <th>ingredients</th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>144015</th>\n",
-       "      <td>2340755</td>\n",
-       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
+       "      <th>1766274</th>\n",
+       "      <td>2353625</td>\n",
+       "      <td>Feed efficiency of lactating Holstein cows is ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144016</th>\n",
-       "      <td>2340756</td>\n",
-       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
+       "      <th>1766275</th>\n",
+       "      <td>2353626</td>\n",
+       "      <td>Contrast Study on Secondary Metabolite Profile...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144017</th>\n",
-       "      <td>2340757</td>\n",
-       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
+       "      <th>1766276</th>\n",
+       "      <td>2353627</td>\n",
+       "      <td>Deriving information from complex data sets: I...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144018</th>\n",
-       "      <td>2340758</td>\n",
-       "      <td>FILTERED WATER, ORGAIN ORGANIC PROTEIN BLEND (...</td>\n",
+       "      <th>1766277</th>\n",
+       "      <td>2353628</td>\n",
+       "      <td>Identification of High and Low Branched-Chain ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144019</th>\n",
-       "      <td>2340759</td>\n",
-       "      <td>COLOMBIAN COFFEE, MILK PROTEIN ISOLATE, COCOA ...</td>\n",
+       "      <th>1766278</th>\n",
+       "      <td>2353629</td>\n",
+       "      <td>Effects of Differences in Resistant Starch Con...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-06T17:59:12.391062Z",
-     "start_time": "2025-11-06T17:59:12.389512Z"
+     "end_time": "2025-11-07T04:28:31.748743Z",
+     "start_time": "2025-11-07T04:28:30.619463Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "a638849d0171c4e1",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7,
+   "source": "sorted_df.to_csv(\"data/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\", index=False)  # save database",
+   "id": "869ea28e7da6bfaa"
   }
  ],
  "metadata": {
