--- a/llm_processing/retrieve_usda_branded_experimental.ipynb
+++ b/llm_processing/retrieve_usda_branded_experimental.ipynb
@@ -48,6 +48,8 @@
    },
    "cell_type": "code",
    "source": [
+    "# Data path\n",
+    "output_path = \"../data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\"\n",
     "# Credentials\n",
     "host = os.getenv(\"POSTGRES_HOST\")\n",
     "port = os.getenv(\"POSTGRES_PORT\")\n",
@@ -263,7 +265,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": 7,
-   "source": "sorted_df.to_csv(\"data/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\", index=False)  # save database",
+   "source": "sorted_df.to_csv(output_path, index=False)  # save database",
    "id": "869ea28e7da6bfaa"
   }
  ],
