--- a/llm_processing/retrieve_food_kg.ipynb
+++ b/llm_processing/retrieve_food_kg.ipynb
@@ -7,31 +7,10 @@
    "id": "5bcd2d4a58af6727"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-21T17:58:28.498195Z",
-     "start_time": "2025-11-21T17:58:28.488834Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "# !pip install --upgrade pip -q\n",
-    "# !pip install psycopg2-binary -q\n",
-    "# !pip install SQLAlchemy -q"
-   ],
-   "id": "8565f315e8ce74cb",
    "outputs": [],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-11-21T17:58:28.599119Z",
-     "start_time": "2025-11-21T17:58:28.507665Z"
-    }
-   },
-   "cell_type": "code",
+   "execution_count": null,
    "source": [
     "import os\n",
     "\n",
@@ -41,30 +20,16 @@
     "\n",
     "load_dotenv()  # Take environment variables from .env"
    ],
-   "id": "initial_id",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 2
+   "id": "c30cef58b4b76812"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T16:39:24.018762Z",
-     "start_time": "2025-11-06T16:39:23.696152Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
+    "# Data path\n",
+    "output_path = \"../data/raw/nourish_public_FoodKG.csv\"\n",
     "# Credentials\n",
     "host = os.getenv(\"POSTGRES_HOST\")\n",
     "port = os.getenv(\"POSTGRES_PORT\")\n",
@@ -80,17 +45,7 @@
     "except Exception as e:\n",
     "    print(\"❌ Connection failed:\", e)"
    ],
-   "id": "9e27b1819da1fd42",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Connected successfully!\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "id": "698deb074524d03b"
   },
   {
    "metadata": {
@@ -285,7 +240,7 @@
    "cell_type": "code",
    "source": [
     "# Save the entire table\n",
-    "df.to_csv(\"data/nourish_public_FoodKG.csv\", index=False)"
+    "df.to_csv(output_path, index=False)"
    ],
    "id": "2661eff38d624e1e",
    "outputs": [],
