--- a/llm_processing/retrieve_food_product.ipynb
+++ b/llm_processing/retrieve_food_product.ipynb
@@ -8,23 +8,6 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-06T17:58:32.578391Z",
-     "start_time": "2025-11-06T17:58:32.576312Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# !pip install --upgrade pip -q\n",
-    "# !pip install psycopg2-binary -q\n",
-    "# !pip install SQLAlchemy -q"
-   ],
-   "id": "8565f315e8ce74cb",
-   "outputs": [],
-   "execution_count": 17
-  },
-  {
-   "metadata": {
     "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-11-06T17:58:32.595498Z",
@@ -65,6 +48,8 @@
    },
    "cell_type": "code",
    "source": [
+    "# Data path\n",
+    "output_path = \"../data/raw/usda_2022_branded_food_product_INGREDIENTS_ONLY.csv\"\n",
     "# Credentials\n",
     "host = os.getenv(\"POSTGRES_HOST\")\n",
     "port = os.getenv(\"POSTGRES_PORT\")\n",
@@ -280,7 +265,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": 26,
-   "source": "sorted_df.to_csv(\"data/usda_2022_branded_food_product_INGREDIENTS_ONLY.csv\", index=False)  # save database",
+   "source": "sorted_df.to_csv(output_path, index=False)  # save database",
    "id": "a43dad2b96d6abd3"
   }
  ],
