moved batch stuff and finalize products but still need to test

--- a/llm_processing/batches/create_batches.ipynb
+++ b/llm_processing/batches/create_batches.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## This file sends batches of rows to OpenAI. You can only enqueue 40 million tokens at a time, equivalent to about 50,000 rows every 24 hours. Use this file if you want to save some money at the expense of time. You are responsible for combining this batch data with the results of the asynchronous calls using the standard OpenAI API.\n",
+    "\n",
+    "## It is recommended to skip this step for simplicity."
+   ],
+   "id": "575124a0c63e9d16"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-12-03T20:40:39.862664Z",
@@ -23,10 +33,10 @@
     "\n",
     "BATCH_SIZE = 25000\n",
     "\n",
-    "with open(\"../SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../../SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    UNIQUE_INGREDIENTS = f.read()\n",
     "\n",
-    "with open(\"../llm_processing/prompts/system_message_products.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../prompts/system_message_products.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    SYSTEM_MSG_PRODUCTS = f.read()\n",
     "    SYSTEM_MSG_PRODUCTS += UNIQUE_INGREDIENTS\n",
     "\n",
@@ -199,12 +209,12 @@
    "source": [
     "# 1. Load Data\n",
     "print(\"Loading dataset...\")\n",
-    "df = pd.read_csv(INPUT_CSV, skiprows=range(1, start_offset + 1)).head(50000)  # limit from open ai for queued tokens\n",
+    "# limit from open ai for queued tokens\n",
+    "df = pd.read_csv(INPUT_CSV, skiprows=range(1, start_offset + 1)).head(50000)\n",
     "total_rows = len(df)\n",
-    "num_batches = ceil(total_rows / BATCH_SIZE)\n",
-    "print(f\"Total rows: {total_rows} | Will create {num_batches} batches.\")\n",
-    "\n",
-    "num_batches = 2"
+    "# 2 batches of 25k are the max you can send\n",
+    "num_batches = min(ceil(total_rows / BATCH_SIZE), 2)\n",
+    "print(f\"Total rows: {total_rows} | Will create {num_batches} batches.\")"
    ],
    "id": "fc6134cd26d735c9",
    "outputs": [
@@ -310,7 +320,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Initialize tracker list\n",
+    "# Initialize a tracker list\n",
     "batch_tracking_data = []\n",
     "\n",
     "# 2. Loop through chunks\n",
@@ -420,19 +430,6 @@
     }
    ],
    "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-03T15:40:15.061515Z",
-     "start_time": "2025-12-03T15:40:15.059712Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "85ae4c7355e6014b",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
