--- a/llm_processing/finalize_products/combine_batches_single_run.ipynb
+++ b/llm_processing/finalize_products/combine_batches_single_run.ipynb
@@ -1,37 +1,43 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# This file combines the batched dat",
+   "id": "712b2c553749bf41"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-04T07:25:28.694911Z",
-     "start_time": "2025-12-04T07:25:28.474889Z"
+     "end_time": "2025-12-10T05:49:44.186348Z",
+     "start_time": "2025-12-10T05:49:44.183690Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from dotenv import load_dotenv\n",
-    "\n",
+    "import os\n",
     "load_dotenv()  # Take environment variables from .env\n",
     "import pandas as pd"
    ],
-   "id": "fa415d94dbb5597a",
+   "id": "e41a62d22fff23f4",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-04T07:25:29.224195Z",
-     "start_time": "2025-12-04T07:25:28.699821Z"
+     "end_time": "2025-12-10T05:48:55.058182Z",
+     "start_time": "2025-12-10T05:48:54.517007Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "raw_data = pd.read_csv(\"../data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")\n",
+    "raw_data = pd.read_csv(\"../../data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")\n",
     "print(len(raw_data))\n",
     "raw_data.head()"
    ],
-   "id": "75881b3644a4ac62",
+   "id": "bb1efc96b7046adc",
    "outputs": [
     {
      "name": "stdout",
@@ -112,106 +118,27 @@
    "execution_count": 2
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-04T07:25:29.266962Z",
-     "start_time": "2025-12-04T07:25:29.249122Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "batch_results_df = pd.read_csv(\"../batches/batch_results_all.csv\")\n",
-    "print(len(batch_results_df))\n",
-    "batch_results_df.head()"
+    "batch_path = \"../batches/batch_results_all.csv\"\n",
+    "\n",
+    "if os.path.exists(batch_path):\n",
+    "    batch_results_df = pd.read_csv(batch_path)\n",
+    "    print(len(batch_results_df))\n",
+    "    display(batch_results_df.head())\n",
+    "else:\n",
+    "    print(\"File does not exist:\", path)"
    ],
-   "id": "85c0e37bda78d3e7",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   fdc_id mapped_ingredient\n",
-       "0  167512          biscuits\n",
-       "1  167513          cinnamon\n",
-       "2  167514        breadcrumb\n",
-       "3  167515            muffin\n",
-       "4  167516            waffle"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fdc_id</th>\n",
-       "      <th>mapped_ingredient</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>167512</td>\n",
-       "      <td>biscuits</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>167513</td>\n",
-       "      <td>cinnamon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>167514</td>\n",
-       "      <td>breadcrumb</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>167515</td>\n",
-       "      <td>muffin</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>167516</td>\n",
-       "      <td>waffle</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 3
+   "id": "3047af1c6cebfd3c"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-04T07:25:29.379336Z",
-     "start_time": "2025-12-04T07:25:29.323439Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "batch_results_df = batch_results_df.merge(\n",
     "    raw_data[['fdc_id', 'description']],\n",
@@ -222,190 +149,19 @@
     "print(len(batch_results_df))\n",
     "batch_results_df.head()"
    ],
-   "id": "40016f2eda546208",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   fdc_id    response                                        description\n",
-       "0  167512    biscuits  Pillsbury Golden Layer Buttermilk Biscuits, Ar...\n",
-       "1  167513    cinnamon  Pillsbury, Cinnamon Rolls with Icing, refriger...\n",
-       "2  167514  breadcrumb  Kraft Foods, Shake N Bake Original Recipe, Coa...\n",
-       "3  167515      muffin     George Weston Bakeries, Thomas English Muffins\n",
-       "4  167516      waffle         Waffles, buttermilk, frozen, ready-to-heat"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fdc_id</th>\n",
-       "      <th>response</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>167512</td>\n",
-       "      <td>biscuits</td>\n",
-       "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>167513</td>\n",
-       "      <td>cinnamon</td>\n",
-       "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>167514</td>\n",
-       "      <td>breadcrumb</td>\n",
-       "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>167515</td>\n",
-       "      <td>muffin</td>\n",
-       "      <td>George Weston Bakeries, Thomas English Muffins</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>167516</td>\n",
-       "      <td>waffle</td>\n",
-       "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 4
+   "id": "5c2630ec9452955"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-12-04T07:25:30.082635Z",
-     "start_time": "2025-12-04T07:25:29.422930Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "single_run_df = pd.read_csv(\"../single_run/results_async.csv\")\n",
     "print(len(single_run_df))\n",
     "single_run_df.head()"
    ],
-   "id": "aa425ed427ebe9fa",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1666279\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "   fdc_id                  description   response\n",
-       "0  421450  CANDY WAFERS PURPLE VANILLA    vanilla\n",
-       "1  421451     TURIN, KAHLUA CHOCOLATES  chocolate\n",
-       "2  421452              PINA SOFT DRINK       soda\n",
-       "3  421453                     LIMONADA   lemonade\n",
-       "4  421454     BOMBI CRAYON, BUBBLE GUM        gum"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fdc_id</th>\n",
-       "      <th>description</th>\n",
-       "      <th>response</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>421450</td>\n",
-       "      <td>CANDY WAFERS PURPLE VANILLA</td>\n",
-       "      <td>vanilla</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>421451</td>\n",
-       "      <td>TURIN, KAHLUA CHOCOLATES</td>\n",
-       "      <td>chocolate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>421452</td>\n",
-       "      <td>PINA SOFT DRINK</td>\n",
-       "      <td>soda</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>421453</td>\n",
-       "      <td>LIMONADA</td>\n",
-       "      <td>lemonade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>421454</td>\n",
-       "      <td>BOMBI CRAYON, BUBBLE GUM</td>\n",
-       "      <td>gum</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
+   "id": "d0d9a764a809b5cd"
   },
   {
    "metadata": {
