moved llm stuff into one folder

--- a/llm_processing/test_food_kg.ipynb
+++ b/llm_processing/test_food_kg.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "# Read the CSV\n",
     "pred_df = pd.read_csv(\"data/output/processed_ingredients.csv\")\n",
-    "test_df = pd.read_csv(\"data/test/TEST_FoodKG_ingredients_normalized.csv\")\n",
+    "test_df = pd.read_csv(\"../data/test/TEST_FoodKG_ingredients_normalized.csv\")\n",
     "# Rename the test column so we don't clash on merge\n",
     "test_df_renamed = test_df.rename(columns={\"ingredients_normalized\": \"ingredients_test\"})\n",
     "# Merge using test_df as the left df to keep its order\n",
