--- a/llm_processing/spacy_unique_ingredients.ipynb
+++ b/llm_processing/spacy_unique_ingredients.ipynb
@@ -322,7 +322,7 @@
    "source": [
     "# Save to a text file, one ingredient per line\n",
     "ingredients_only = [item for item, count in filtered]\n",
-    "with open(\"spacy_unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../SpacyProcessing/spacy_unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(\"\\n\".join(ingredients_only))\n",
     "\n",
     "print(f\"Saved {len(ingredients_only)} unique ingredients to unique_ingredients.txt\")"
@@ -357,7 +357,7 @@
     "import spacy\n",
     "\n",
     "# Read ingredients from file\n",
-    "with open(\"spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../SpacyProcessing/spacy_unique_ingredients.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "    unique_ingredients = [line.strip() for line in f if line.strip()]\n",
     "# Load spaCy model\n",
     "nlp = spacy.load(\n",
