renamed sample data and added some readmes

--- a/llm_processing/test_products.ipynb
+++ b/llm_processing/test_products.ipynb
@@ -6,22 +6,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-05T05:42:54.538786Z",
-     "start_time": "2025-12-05T05:42:54.536843Z"
+     "end_time": "2025-12-10T19:51:25.605883Z",
+     "start_time": "2025-12-10T19:51:24.629028Z"
     }
    },
    "source": [
-    "\n",
+    "import pandas as pd\n",
     "from rapidfuzz import fuzz"
    ],
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T05:42:54.548848Z",
-     "start_time": "2025-12-05T05:42:54.546022Z"
+     "end_time": "2025-12-10T19:51:26.429603Z",
+     "start_time": "2025-12-10T19:51:26.426515Z"
     }
    },
    "cell_type": "code",
@@ -54,7 +54,7 @@
    ],
    "id": "c40f4db3338a47eb",
    "outputs": [],
-   "execution_count": 73
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -195,13 +195,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-05T05:42:55.274076Z",
-     "start_time": "2025-12-05T05:42:55.268489Z"
+     "end_time": "2025-12-10T19:52:33.290433Z",
+     "start_time": "2025-12-10T19:52:33.285111Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "test_df = pd.read_csv(\"data/test/TEST_food_branded.csv\", usecols=[\"fdc_id\", \"description\", \"mapped_ingredient\"])\n",
+    "test_df = pd.read_csv(\"../data/test/TEST_branded_food_product.csv\")\n",
     "test_df.head(100)"
    ],
    "id": "1503a73c5b70987f",
@@ -334,12 +334,12 @@
        "</div>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 8
   },
   {
    "metadata": {
