readme for batches

--- a/llm_processing/batches/create_batches.ipynb
+++ b/llm_processing/batches/create_batches.ipynb
@@ -4,9 +4,14 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## This file sends batches of rows to OpenAI. You can only enqueue 40 million tokens at a time, equivalent to about 50,000 rows every 24 hours. Use this file if you want to save some money at the expense of time. You are responsible for combining this batch data with the results of the asynchronous calls using the standard OpenAI API.\n",
+    "### create_batches\n",
     "\n",
-    "## It is recommended to skip this step for simplicity."
+    "This script sends batches of rows to OpenAI.\n",
+    "You may enqueue up to **40 million tokens at a time**, which is roughly **50,000 rows per 24 hours**.\n",
+    "Batch IDs are stored in `batch_tracker.json`.\n",
+    "\n",
+    "Use this script if you want to reduce cost at the expense of processing time.\n",
+    "You are responsible for merging the batch output with the results of the asynchronous calls using the standard OpenAI API."
    ],
    "id": "575124a0c63e9d16"
   },
