--- a/llm_processing/batches/read_batches.ipynb
+++ b/llm_processing/batches/read_batches.ipynb
@@ -3,7 +3,10 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## This file pulls batches tracked in batch_tracker.json and aggregates them into a single csv.",
+   "source": [
+    "### read_batches\n",
+    "This script retrieves the batches listed in `batch_tracker.json` and aggregates them into a single CSV file."
+   ],
    "id": "739048d23c58308c"
   },
   {
